* introduce structured logging
